# Ros_Arduino_Bridge_Omnidireccional

Codigos Arduino/ControlComSerial/: ControlComSerial.ino
Codigos Arduino/ROSArduinoBridgeOmnidireccional/: Interrupciones.h  ROSArduinoBridgeOmnidireccional.ino  commands.h
Codigos Arduino/ServidorWebMEGA/: ServidorWebMEGA.ino
Codigos Arduino/ServidorWebWeMos/: ServidorWebWeMos.ino
ros_arduino_bridge/: README.md
ros_arduino_bridge/ros_arduino_python/: CMakeLists.txt
ros_arduino_bridge/ros_arduino_python/config/: my_arduino_params.yaml
ros_arduino_bridge/ros_arduino_python/launch/: arduino.launch
ros_arduino_bridge/ros_arduino_python/nodes/: arduino_node.py
ros_arduino_bridge/ros_arduino_python/src/: joy_to_speed.cpp
ros_arduino_bridge/ros_arduino_python/src/ros_arduino_python/: arduino_driver.py  prueba.py  ros_odometry_publisher.py
